# Dusk-mk2-2D

./: .gitattributes  .gitignore  CMakeLists.txt  Dusk2D.sln  Dusk2D.tss  LICENSE  Makefile  setup-fedora.sh  setup-ubuntu.sh
CMake/: DuskDependencies.cmake  FindSFML.cmake
Common/: Common.vcxproj  Common.vcxproj.filters  Makefile
Common/Collections/: ArrayList.hpp  Map.hpp
Common/Dusk/Collections/: ArrayList.hpp  Map.hpp
Common/Dusk/Events/: Callbacks.cpp  Callbacks.hpp  Delegate.hpp  Event.cpp  Event.hpp  IEventDispatcher.cpp  IEventDispatcher.hpp
Common/Dusk/Logging/: ILogger.hpp  LogColors.hpp  Logging.cpp  Logging.hpp
Common/Dusk/Logging/Loggers/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp
Common/Dusk/Scripting/: ScriptHost.cpp  ScriptHost.hpp  Scripting.cpp  Scripting.hpp
Common/Dusk/Timing/: FrameTimeInfo.hpp
Common/Dusk/Tracking/: ITrackedObject.cpp  ITrackedObject.hpp  MemoryTracker.cpp  MemoryTracker.hpp
Common/Dusk/Utility/: Console.hpp  Singleton.hpp  Strings.cpp  Strings.hpp
Common/Events/: Callbacks.cpp  Callbacks.hpp  Delegate.hpp  Event.cpp  Event.hpp  IEventDispatcher.cpp  IEventDispatcher.hpp
Common/Logging/: ILogger.hpp  LogColors.hpp  LoggingSystem.cpp  LoggingSystem.hpp
Common/Logging/Loggers/: ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp
Common/Scripting/: ScriptHost.cpp  ScriptHost.hpp  ScriptingSystem.cpp  ScriptingSystem.hpp
Common/Timing/: FrameTimeInfo.hpp
Common/Tracking/: ITrackedObject.cpp  ITrackedObject.hpp  MemoryTracker.cpp  MemoryTracker.hpp
Common/Utility/: Benchmark.hpp  Console.hpp  Strings.cpp  Strings.hpp  Types.hpp
Content/: Content.vcxproj  Makefile  compile-scripts.bat  compile.bat
Content/Scripts/: Setup.lua
Content/Scripts/Dusk/: Events.lua  Graphics.lua  Input.lua  Object.lua  Program.lua  Timing.lua
Documentation/: Doxyfile  footer.html  header.html
Documentation/html/assets/: customdoxygen.css
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Main.cpp  Makefile  Program.cpp  Program.hpp  compile-scripts.bat
Engine/Dusk/: Config.hpp.in  Main.hpp  Program.cpp  Program.hpp  RenderEventData.cpp  RenderEventData.hpp  UpdateEventData.cpp  UpdateEventData.hpp
Engine/Dusk/Audio/: AudioSystem.cpp  AudioSystem.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
Engine/Dusk/Collections/: ArrayList.hpp  HashMap.hpp  Map.hpp
Engine/Dusk/Events/: Callbacks.hpp  Delegate.hpp  Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  IEventDispatcher.cpp
Engine/Dusk/Graphics/: Color.hpp  Cursor.cpp  Cursor.hpp  Font.cpp  Font.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Sprite.cpp  Sprite.hpp  TextBuffer.cpp  TextBuffer.hpp  Texture.cpp  Texture.hpp
Engine/Dusk/Input/: InputSystem.cpp  InputSystem.hpp  Keyboard.cpp  Keyboard.hpp  Mapped.cpp  Mapped.hpp  Mouse.cpp  Mouse.hpp
Engine/Dusk/Input/Inputs/: Key.hpp  Mapped.cpp  Mouse.hpp
Engine/Dusk/Logging/: ILogger.hpp  Logger.hpp  Logging.cpp  Logging.hpp
Engine/Dusk/Logging/Loggers/: ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp
Engine/Dusk/Scripting/: ScriptHost.cpp  ScriptHost.hpp  Scripting.cpp  Scripting.hpp
Engine/Dusk/Timing/: FrameTimeInfo.hpp
Engine/Dusk/Tracking/: MemoryTracker.cpp  MemoryTracker.hpp  TrackedObject.cpp  TrackedObject.hpp
Engine/Dusk/UI/: IUIElement.cpp  IUIElement.hpp  Label.cpp  Label.hpp  TextBox.cpp  TextBox.hpp  TextButton.cpp  TextButton.hpp  UIButton.cpp  UIButton.hpp  UIElement.cpp  UIElement.hpp  UIFont.cpp  UIFont.hpp  UIFrame.cpp  UIFrame.hpp  UIInput.cpp  UIInput.hpp  UILabel.cpp  UILabel.hpp  UIManager.cpp  UIManager.hpp  UIRenderFrame.hpp
Engine/Dusk/Utility/: Benchmark.hpp  Platform.hpp  Strings.cpp  Strings.hpp  Types.hpp
Engine/Geometry/: Rect.hpp  Vector2.hpp
Engine/Graphics/: Animation.cpp  Animation.hpp  GraphicsContext.cpp  GraphicsContext.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Engine/Input/: InputSystem.cpp  InputSystem.hpp
Engine/Input/Inputs/: Key.cpp  Key.hpp  Mouse.cpp  Mouse.hpp
Engine/Scripts/: DuskClass.lua  Events.lua  Graphics.lua  Input.lua  Program.lua  Timing.lua
Libraries/SFML/lib/x64/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s-d.lib
Libraries/SFML/lib64/: sfml-system-s-d.lib  sfml-window-s.lib
ScriptLib/: ScriptLib.vcxproj  ScriptLib.vcxproj.filters
ScriptLib/Dusk/: Audio.lua  Class.lua  Events.lua  Graphics.lua  Input.lua  Object.lua  Program.lua  UI.lua
TestApp/: CMakeLists.txt  CustomRenderFrame.h  Logging.h  Main.cpp  Makefile  TestApp.cpp  TestApp.h  TestApp.vcxproj  TestApp.vcxproj.filters
TestApp/Content/Interface/: EditorFrame.xml  MapFrame.xml  ToolboxFrame.lua  ToolboxFrame.xml
TestApp/Content/Scripts/: Setup.lua
TestContent/: Makefile  TestContent.vcxproj
TestContent/Scripts/: Setup.lua
Tools/: content.bat  content.sh
